feat(weather): logic for reading CSV added
only limited handling of invalid inputs currently